# semverbump

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  bumpwright.toml  pyproject.toml
.github/scripts/: generate_badges.py
.github/workflows/: bumpwright-auto-bump.yml  ci.yml  docs.yml  pre-commit.yml  python-package.yml  python-publish.yml  unit-tests.yml
bumpwright/: __init__.py  cli.py  compare.py  config.py  gitutils.py  public_api.py  types.py  version_schemes.py  versioning.py
bumpwright/analysers/: __init__.py  cli.py  graphql.py  graphql_schema.py  grpc.py  migrations.py  openapi.py  utils.py  web_routes.py
bumpwright/analyzers/: __init__.py  cli.py  migrations.py  utils.py  web_routes.py
bumpwright/cli/: __init__.py  bump.py  decide.py  init.py
bumpwright/templates/: changelog.md.j2
docs/: _bumpwright_click.py  advanced.rst  analysers.rst  analyzers.rst  changelog.rst  cli_reference.rst  conf.py  configuration.rst  contributing.rst  glossary.rst  index.rst  installation.rst  performance.rst  quickstart.rst  recipes.rst  roadmap.rst  troubleshooting.rst  usage.rst  versioning.rst  workflows.rst
docs/_static/: custom.css
docs/_static/workflows/: bumpwright-auto-bump.yml  bumpwright-check.yml  bumpwright-release.yml
docs/_utils/: __init__.py  badge_utils.py
docs/advanced/: configuration-schema.rst  custom-analysers.rst  index.rst  performance.rst
docs/analysers/: cli.rst  graphql.rst  grpc.rst  index.rst  migrations.rst  openapi.rst  web_routes.rst
docs/analyzers/: cli.rst  index.rst  migrations.rst  web_routes.rst
docs/ci/: github-actions.rst
docs/guides/: customization.rst  github-actions.rst  index.rst  monorepos.rst  troubleshooting.rst  workflows.rst
docs/guides/advanced/: ci_pipelines.rst  index.rst  monorepos.rst  plugins.rst
docs/recipes/: index.rst
docs/scripts/: generate_badges.py
docs/usage/: bump.rst  index.rst  init.rst
scripts/: generate_badges.py
semverbump/: __init__.py  cli.py  compare.py  config.py  gitutils.py  public_api.py  versioning.py
semverbump/analyzers/: __init__.py  cli.py  migrations.py  web_routes.py
tests/: cli_helpers.py  conftest.py  test_analyser_registry.py  test_analysers_integration.py  test_analysers_utils.py  test_analyzer_flags.py  test_analyzer_registry.py  test_analyzers_integration.py  test_analyzers_utils.py  test_badge_utils.py  test_cli_analyser.py  test_cli_analyser_flags.py  test_cli_analyzer.py  test_cli_analyzer_flags.py  test_cli_analyzers.py  test_cli_auto.py  test_cli_bump_decide_parity.py  test_cli_bump_format.py  test_cli_bump_helpers.py  test_cli_changelog.py  test_cli_core.py  test_cli_decide_default.py  test_cli_ignore.py  test_cli_init.py  test_cli_logging.py  test_cli_parser.py  test_compare.py  test_config.py  test_gitutils.py  test_graphql_analyser.py  test_migrations.py  test_openapi_analyser.py  test_optional_analyser_import.py  test_parse_errors.py  test_public_api.py  test_repo_url.py  test_versioning.py  test_web_routes.py
tomli/: __init__.py
tomlkit/: __init__.py
