[project]
name = "bumpwright"
version = "0.8.0"
description = "Static public-API diff + heuristics to suggest semantic version bumps."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Lewis Morris", email = "lewis@arched.dev" }]
license = { file = "LICENSE" }
dependencies = [
  "libcst>=1.4.0",
  "tomlkit>=0.13.2",
  "packaging>=24.0",
  "tomli>=1.0.0",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Version Control",
]
keywords = ["semantic-versioning", "semver", "api", "diff", "release"]

[project.urls]
homepage = "https://github.com/arched-dev/bumpwright"
repository = "https://github.com/arched-dev/bumpwright"
documentation = "https://bumpwright.readthedocs.io"
bug_tracker = "https://github.com/arched-dev/bumpwright/issues"

[project.scripts]
bumpwright = "bumpwright:main"

[project.optional-dependencies]
test = [
  "pytest",
  "flask",
  "fastapi",
  "alembic",
  "sqlalchemy",
  "tomlkit",
  "tomli",
  "click",
]
  docs = [
    "sphinx>=7.3",
    "sphinx-wagtail-theme",
    "sphinx-autodoc-typehints>=2.2",
    "sphinx-copybutton>=0.5.2",
    "myst-parser",
    "sphinx-click",
  ]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 127
target-version = "py310"
extend-exclude = ["docs", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "PL"]
ignore = [
  "PLR0912",
  "PLR1702",
]

[tool.pytest.ini_options]
addopts = "-q"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[changelog]
path = "CHANGELOG.md"
